Fixed a bug with the scrollbar not reappearing.

--- a/Common/css/style.css
+++ b/Common/css/style.css
@@ -137,6 +137,7 @@ input[id='critical']:checked + label {
 }
 
 #logger-view {
+	overflow-y: scroll;
 	max-height: 430px;
 	text-align: left;
 }
